option java_package = "com.example.protocol";
option java_outer_classname = "LoginPro";

message CS_Login {
	
	required string name = 1;
	
	required string password = 2;
}

message CS_Regedit {
	
	required string name = 1;
	
	required string password = 2;
}

message SC_Globle_message {

	required int32 key= 1;
	required int32 stats = 2;
	required string context = 3;
}

message CS_LoginNewName{
	required string name= 1;
}

message SC_LoginInfo{
	required string name= 1;
}